<?xml version="1.0" encoding="UTF-8"?>
<!--
 This file is part of JATF.

 JATF is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, version 3 of the License.

 JATF is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with JATF.  If not, see <http://www.gnu.org/licenses/>.
-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.duke2k.jatf</groupId>
  <artifactId>jatf-project</artifactId>

  <packaging>pom</packaging>

  <name>Java Architecture Test Framework</name>
  <version>1.1.0-SNAPSHOT</version>

  <description>The Java Architecture Test Framework (JATF) allows static code analysis within unit tests. This is the
    root project, POM only.
  </description>
  <url>https://github.com/Duke2k/jatf</url>
  <licenses>
    <license>
      <name>GPLv3</name>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Samuel Eickelberg</name>
      <email>samuel.eickelberg@posteo.de</email>
    </developer>
  </developers>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.5.RELEASE</version>
  </parent>

  <modules>
    <module>jatf-core</module>
    <module>jatf-tests</module>
    <module>jatf-rules</module>
    <module>jatf-web</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>12</java.version>
    <jatf.version>${project.version}</jatf.version>
    <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
    <maven-scm-plugin.version>1.11.2</maven-scm-plugin.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-plugin</artifactId>
        <version>${maven-scm-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
